fix: spacing for nested reversed lists

--- a/src/scss/base/_list.scss
+++ b/src/scss/base/_list.scss
@@ -67,6 +67,16 @@ ol.default-list {
     &[reversed] {
         display: flex;
         flex-direction: column-reverse;
+
+        li {
+            &:first-child {
+                margin-bottom: 0;
+            }
+
+            &:not(:first-child) {
+                @include v(margin-bottom, small);
+            }
+        }
     }
 }
 [counter-reset] {
